--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
   font-family: HDI-GerlingSans-light;
   src: url("../fonts/TTF/HDI-GerlingSansCond-Light.ttf");
 }
-*
+*,::after,::before
 {
   margin: 0;
   padding: 0;
@@ -77,6 +77,11 @@ body
 a{
     text-decoration: none;
 }
+img
+{
+  vertical-align: middle;
+  border-style: none;
+}
 a.navbar-link {
   font-size: 21px;
   color: #009c33;
@@ -119,7 +124,8 @@ section.sticky-bar p {
   margin: 0;
   padding-right: 30px;
 }
-section.sticky-bar .sticky-btn {
+section.sticky-bar .sticky-btn 
+{
   border: solid 1.5px #ff9632;
   color: white;
   background-color: #ff9632;
@@ -157,15 +163,14 @@ main {
 .bg-img {
   position: absolute;
   width: 100%;
-  top: 580px;
+  top: 558px;
   left: 30px;
 }
 .bg-img img
 {
   width: 100%;
   float: left;
-  vertical-align: middle;
-  border-style: none;
+  
 }
 .content
 {
@@ -178,7 +183,7 @@ main {
 {
   width: 55%;
   position: absolute;
-  top: 93px;
+  top: 100px;
   z-index: 10;
 }
 .content-first h1
@@ -189,7 +194,6 @@ main {
   font-style: normal;
   text-transform: uppercase;
   font-family: HDI-GerlingSans;
-  margin: 0;
   color: #009c33;
   max-width: 660px;
   width: 100%;
@@ -209,27 +213,28 @@ main {
 {
   display: flex;
 }
-.content-second
+.content-first-data
 {
   position: absolute;
-  top: 300px;
+  top: 260px;
   width: 55%;
   z-index: 10;
 }
-.content-second ul
+.content-first-data ul
 {
   list-style-type: none;
-    padding-right: 10px;
-    margin: 0;
+  padding-left: 40px;
+  margin: 0;
 }
-.content-second ul li {
+.content-first-data ul li {
   font-size: 19px;
   font-stretch: condensed;
   font-style: normal;
   position: relative;
   padding-bottom: 20px;
+  line-height: 1.5;
 }
-.content-second li:before {
+.content-first-data ul li:before {
   content: "";
   display: inline-block;
   position: absolute;
@@ -250,7 +255,8 @@ main {
   width: 50%;
   position: absolute;
   right: -20px;
-  top: 101px;
+  top: 100px;
+
 }
 .content-first-image object {
   position: absolute;
@@ -258,4 +264,146 @@ main {
   float: left;
   top: 0;
   margin-right: -10%;
+
+ 
+}
+.content-btn
+{
+  margin-top: 30px;
+}
+.btn
+{
+  display: inline-block;
+  text-align: center;
+  vertical-align: middle;
+   position: relative;
+  color: #fff;
+  font-size: 20px;
+  font-weight: bold;
+  font-family: HDI-GerlingSans;
+  line-height: 1.5;
+  border-radius: .25rem;
+  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+.btn:hover {
+  background: #ff9632;
+  color: #fff;
+  box-shadow: 2px 2px 5px #ff9632;
+}
+.btn-first
+{
+  background: #ff9632;
+  box-shadow: 2px 2px 5px #ff9632;
+  padding: 7.5px 60px 10px 15px;
+  max-width: 280px;
+  width: 264px;
+  height: 48px;
+}
+.btn-first::after
+{
+  position: absolute;
+  background-color: #ff7200;
+    right: 0;
+    top: 0;
+    font-size: 140%;
+    width: 53px;
+    height: 100%;
+    padding: 5px;
+    content: "";
+    background-image: url(../images/Arrow_CTA.svg);
+    background-repeat: no-repeat;
+    background-position: center
+}
+.btn-second
+{
+  border: solid 1.5px #ff9632;
+    color: #ff9632;
+    width: 240px;
+    padding: 8.5px 0 0 0;
+    height: 48px;
+    margin: 34px 0 33px 16px;
+    font-size: 19px;
+    font-weight: bold;
+    font-family: HDI-GerlingSans;
+}
+.content-second
+{
+  width: 100%;
+  height: 231px;
+  font-style: normal;
+  line-height: 1.32;
+  letter-spacing: normal;
+  color: #000000;
+  margin: 0 auto;
+  text-align: center;
+  position: absolute;
+  left: 60%;
+  top: 780px;
+  transform: translate(-60%,-50%);
+  padding-top: 50px;
+}
+.content-second-wrap
+{
+  max-width: 554px;
+  margin: 0 auto;
+  text-align: center;
+}
+.content-second p {
+  font-size: 19px;
+  font-weight: 300;
+  font-stretch: condensed;
+  font-style: normal;
+  line-height: 1.32;
+  letter-spacing: normal;
+  color: #000000;
+  padding-bottom: 12px;
+  margin: 0;
+}
+.content-second h3 {
+  font-size: 30px;
+  font-weight: bold;
+  line-height: 45px;
+  color: #009c33;
+  text-transform: uppercase;
+  font-family: HDI-GerlingSans;
+  margin-bottom: 0px;
+}
+.content-second p.big-p {
+  font-size: 21px;
+  line-height: 40px;
+  padding-bottom: 12px;
+  padding-top: 5px;
+}
+.features-content {
+  width: 100%;
+  display: flex;
+  padding-top: 50px;
+}
+
+.features-content .feature {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 20px;
+  max-width: 33.33%;
+}
+.features-content .feature img {
+  width: 110px;
+  height: 130px;
+}
+
+.features-content .feature h4 {
+  font-size: 21px;
+  font-weight: bold;
+  line-height: 1.57;
+  color: #009c33;
+  font-family: HDI-GerlingSans;
+  margin: 14px 0;
+  text-align: center;
+}
+.features-content .feature p {
+  /* font-family: HDI-GerlingSans; */
+  font-size: 19px;
+  line-height: 25px;
+  text-align: center;
 }
