--- a/css/style.css
+++ b/css/style.css
@@ -540,3 +540,261 @@ main {
     width: 650px !important;
     right: -30px;
 }
+
+
+.online-section
+{
+  width: 100%;
+  float: left;
+  padding-bottom: 150px;
+  padding-top: 35px;
+}
+.online-section-header
+{
+  text-align: center;
+  max-width: 580px;
+  width: 100%;
+  margin: 50px auto 0;
+}
+.online-section p
+{
+  font-size: 21px;
+  font-weight: 300;
+  line-height: 1.9;
+  color: #000000;
+  font-family: HDI-GerlingSans-light;
+  padding-bottom: 38px;
+} 
+.online-section p.head
+{
+  padding-bottom: 8px;
+  line-height: 1.4;
+}
+.online-section h3 ,.insurance-head h3{
+  font-size: 30px;
+  font-weight: bold;
+  font-stretch: condensed;
+  font-style: normal;
+  line-height: 1.1;
+  letter-spacing: normal;
+  text-transform: uppercase;
+  color: #009c33;
+  font-family: HDI-GerlingSans;
+}
+.show-data
+{
+  display: block;
+}
+.wrapper
+{
+  margin:0 -5px;
+  display: flex;
+  flex-wrap: wrap;
+}
+.online-data
+{
+  flex: 0 0 33.333333%;
+  max-width: 33.333333%;
+  position: relative;
+  width: 100%;
+  padding:0 15px;
+}
+.online-section-data ul
+{
+  height: 100%;
+}
+.online-section-data ul li
+{
+  list-style: none;
+}
+.online-image1 img
+{
+  width: 70.1px;
+  height: 101.8px;
+}
+.online-image2 img
+{
+  width: 81.1px;
+  height: 102px;
+}
+.online-image3 img
+{
+  width: 106.4px;
+  height: 81px;
+}
+.flex-item
+{
+  align-items: center;
+}
+.flex-item-end
+{
+  align-items: flex-end;
+}
+.online-section-data .number-data
+{
+  padding: 0 5px 0 10px;
+  font-size: 45px;
+  font-weight: bold;
+  font-stretch: condensed;
+  font-style: normal;
+  line-height: 0.44;
+  letter-spacing: normal;
+  color: #ff9632;
+}
+.online-section-data .text-data
+{
+  font-size: 19px;
+    font-weight: bold;
+    font-stretch: condensed;
+    font-style: normal;
+    line-height: 23px;
+    letter-spacing: normal;
+    color: #009c33;
+    font-family: HDI-GerlingSans;
+    text-align: left;
+}
+.insurance-section
+{
+  background: #e6f5ec;
+  padding: 150px 0;
+  width: 100%;
+  float: left;
+}
+.insurance-head
+{
+  text-align: center;
+    max-width: 580px;
+    width: 100%;
+    height: 77px;
+    margin: 0 auto 60px;
+}
+.insurance-head p
+{
+  font-family: HDI-GerlingSans-light;
+    font-size: 20px;
+    font-weight: 300;
+    font-stretch: condensed;
+    line-height: 1.9;
+    color: #000000;
+    margin-bottom: 1rem;
+}
+.insurance-head h3
+{
+  margin-bottom: .5rem;
+}
+.insurance-detail-wrapper
+{
+  margin-top: 82px;
+  float: left;
+  width: 100%;
+}
+.insurence-detail-head
+{
+  width: 100%;
+    float: left;
+    display: flex;
+    margin-top: 50px;
+}
+.insurence-detail-data
+{
+  max-width: 375px;
+    float: left;
+    width: 33.33%;
+}
+.margin-data
+{
+  margin:0 19px;
+}
+.text-center
+{
+  text-align: center;
+}
+.img-data
+{
+  padding: 0;
+  width: 100%;
+  float: left;
+  background: #fff;
+  border-radius: 10px 10px 0px 0;
+}
+.cl-orange .img-data
+{
+  border: 2px solid #ef8a29;
+  border-bottom: 0;
+}
+.cl-green .img-data
+{
+  border: 2px solid #009c33;
+  border-bottom: 0;
+}
+.img-data img {
+  margin-top: -50px;
+  margin-bottom: -1px;
+  width: 100%;
+  height: auto;
+  
+}
+.bg-white {
+  background: #ffffff;
+  border-radius: 0px 0 10px 10px;
+  
+}
+.cl-orange .bg-white {
+  border: 2px solid #ef8a29;
+  border-top: 0;
+}
+.cl-orange h3.insurence-detail-heading {
+  background: #ff9632;
+  position: relative;
+  z-index: 99999;
+}
+.cl-green .bg-white {
+  border: 2px solid #009c33;
+  border-top: 0;
+}
+.cl-green h3.insurence-detail-heading {
+  background: #009c33;
+  position: relative;
+  z-index: 99999;
+}
+.heading-font
+{
+  font-size: 23px;
+  line-height: 1.16;
+    letter-spacing: 0.95px;
+    text-transform: uppercase;
+}
+.insurence-detail-heading
+{
+  padding: 8px 0 5px 0;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    
+    color: #ffffff;
+}
+.sub-font {
+  font-size: 19px;
+  letter-spacing: normal;
+  line-height: 1.74;
+  text-transform: capitalize;
+}
+.first-heading::before {
+  content: "Unsere Produktlinien";
+  position: absolute;
+  text-transform: capitalize;
+  top: 0;
+  left: -107%;
+  background-color: #b3e1c2;
+  width: 101%;
+  text-align: left;
+  padding: 20px 0 19px 19px;
+  z-index: 0;
+  font-size: 22px;
+  font-weight: 300;
+  font-stretch: condensed;
+  font-style: normal;
+  line-height: 1.5;
+  letter-spacing: normal;
+  color: #000000;
+}
