--- a/css/queries.css
+++ b/css/queries.css
@@ -19,6 +19,11 @@
         margin-top: 0px;
         margin-bottom: 70px;
     }
+    #question-container h4 {
+        font-size: 24px;
+        font-weight: bold;
+        line-height: 1.25;
+    }
     #question-container p.slider-head {
         font-size: 17px;
         line-height: 1.35;
@@ -250,6 +255,16 @@
 
 @media only screen and (max-width: 767px) {
 
+    .navbar-link{
+        padding: 4px;
+      }
+      .top-nav .fixed-top.shrink .navbar-toggle {
+        padding: 10px;
+      }
+      .top-nav .fixed-top.shrink,
+      .top-nav .fixed-top {
+        padding: 0;
+      }
     .change-head .third-heading
     {
         font-size: 19px;
@@ -894,6 +909,12 @@
 }
 
 @media only screen and (min-width: 768px) {
+    .nav-expand {
+        -ms-flex-flow: row nowrap;
+        flex-flow: row nowrap;
+        -ms-flex-pack: start;
+        justify-content: flex-start;
+    }
     .navbar-toggle {
         display: none;
     }
@@ -904,6 +925,10 @@
     .item-margin {
         padding-left: 0!important;
         margin-left: 1.5rem!important;
+    }
+    #question-container h4 {
+        font-size: 30px;
+        line-height: 1.5;
     }
     .nav-margin
     {
@@ -922,7 +947,7 @@
     }
     .optimal-section p {
         font-size: 21px;
-        line-height: 1.9;
+        /* line-height: 1.9; */
     }
     .optimal-section .second-heading {
         font-size: 30px;
@@ -1062,6 +1087,7 @@
         padding-right: 5px;
         padding-left: 5px;
     }
+    
     .change-head .second-heading {
         font-size: 28px;
     }
@@ -1094,6 +1120,9 @@
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
 
+    .top-nav .fixed-top.shrink {
+        padding: 5px 20px;
+      }
     a.navbar-link {
         font-size: 14px;
     }
@@ -1561,6 +1590,40 @@
 }
 
 @media only screen and (min-width: 1600px) {
+
+    
+      
+      .insurence-detail-content {
+        padding: 0 10px;
+      }
+      .content
+      {
+        max-width: 1500px;
+      }
+      .main-section {
+        width: 1500px;
+        height: 3650px;
+        overflow: hidden;
+      }
+      .bg-img {
+        position: absolute;
+        width: 100%;
+        top: 580px;
+        left: 35px;
+      }
+      .online-section-data ul {
+        justify-content: center;
+        width: 100%;
+      }
+    
+      .insurence-detail-data {
+        max-width: 100%;
+        float: left;
+        width: 33.33%;
+      }
+
+
+
     .content-fifth-image {
         padding-top: 0;
         position: absolute;
