--- a/css/style.css
+++ b/css/style.css
@@ -29,15 +29,19 @@ body {
 
 .top-nav
 {
-  /* padding: 40px 15px; */
+  padding: 40px 15px;
 }
 .nav
 {
   flex: 0 0 100%;
     max-width: 100%;
+    position: relative;
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
 }
 .fixed-top {
-  position: fixed;
+  position: fixed !important;
   top: 0;
   right: 0;
   left: 0;
@@ -55,6 +59,12 @@ body {
   transition: all 0.1s ease;
   box-shadow: -1px -2px 6px 2px #454545;
 } */
+.top-nav .fixed-top.shrink {
+  padding: 5px 65px 10px;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.1s ease;
+  box-shadow: -1px -2px 6px 2px #454545;
+}
 .bg-wh {
   background-color: #fff!important;
 }
@@ -356,7 +366,7 @@ main {
   text-align: center;
   vertical-align: middle;
   position: relative;
-
+  border: 1px solid transparent;
   font-size: 20px;
   font-weight: bold;
   font-family: HDI-GerlingSans;
@@ -400,6 +410,7 @@ main {
   position: absolute;
   background-color: #ff7200;
   color: #fff !important;
+
   right: 0;
   top: 0;
   font-size: 140%;
@@ -1071,6 +1082,17 @@ main {
   margin-bottom: 64px;
   width: 100%;
 }
+.traffic-main-heading h3 {
+  color: #000000;
+  font-size: 20px;
+  margin: 0;
+  font-family: HDI-GerlingSans;
+  font-weight: bold;
+  font-stretch: condensed;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+}
 .traffic-sub-heading {
   background: #b3e1c2;
   height: 64px;
@@ -1205,9 +1227,9 @@ main {
 }
 .optimal-head .second-heading {
   font-family: HDI-GerlingSans;
-  font-size: 30px;
+  font-size: 24px;
   font-weight: bold;
-  line-height: 1.5;
+  line-height: 1.38;
   color: #009c33;
   margin-bottom: 0.5rem;
 }
@@ -1224,7 +1246,7 @@ main {
   font-size: 19px;
   font-stretch: condensed;
   font-style: normal;
-  line-height: 1.84;
+  line-height: 1.55;
   letter-spacing: normal;
   text-align: center;
   color: #000000;
@@ -1265,11 +1287,7 @@ main {
   justify-content: space-between;
   padding: 40px 5px;
 }
-
-/* #question-container h4{
-  font-size: 24px;
-}
-#question-container .sub-title {
+#question-container p {
   font-stretch: condensed;
   font-style: normal;
   letter-spacing: normal;
@@ -1278,7 +1296,21 @@ main {
   font-weight: 300;
   line-height: 1.94;
   color: #000000;
-} */
+  margin-bottom: 1rem;
+}
+#question-container h4{
+  font-family: HDI-GerlingSans;
+    font-size: 24px;
+    font-weight: bold;
+    font-stretch: condensed;
+    font-style: normal;
+    line-height: 1.25;
+    letter-spacing: normal;
+    text-align: center;
+    text-transform: uppercase;
+    color: #009c33;
+}
+
 .question-controls,
 .nav-controls,
 .side-text-controls {
@@ -1324,6 +1356,8 @@ main {
 }
 .change-head .third-heading {
   line-height: 1.9;
+  font-size: 21px;
+  font-weight: 300;
 }
 .details {
   max-width: 436px;
@@ -1434,7 +1468,7 @@ main {
   margin-bottom: 106px;
   position: relative;
 }
-p.slider-head {
+#question-container p.slider-head {
   margin-top: 32px;
   margin-bottom: 32px;
   font-family: HDI-GerlingSans;
@@ -1487,10 +1521,13 @@ p.slider-head {
   height: 19.6px;
   top: 5px;
 }
+.question-arrow, .nav-controls, .side-text-controls {
+  width: 100%;
+}
 .question-arrow {
   position: absolute;
   top: 410px;
-
+  padding: 0 50px;
   display: flex;
   justify-content: space-between;
   box-sizing: border-box;
@@ -1499,6 +1536,13 @@ p.slider-head {
   z-index: 100;
   font-size: 40px;
   color: #009c33;
+}
+.question-arrow
+{
+  top: 530px;
+    padding: 0 20px;
+    z-index: 10;
+    height: 0;
 }
 .question-arrow i {
   cursor: pointer;
@@ -1589,7 +1633,7 @@ p.slider-head {
   width: 70%;
   float: left;
 }
-.active + div {
+.faq-que.active + div {
   padding-bottom: 40px;
 }
 .faq-toggle {
@@ -1713,7 +1757,7 @@ footer {
   font-family: HDI-GerlingSans-light;
   font-size: 19px;
 }
-.first-p {
+.plan-section .first-p {
   font-size: 17px;
   margin-top: 110px;
   margin-bottom: 10px;
